[package]
name = "autoencoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "autoencoder"
path = "src/lib.rs"

[[bin]]
name = "autoencoder"
path = "src/main.rs"

[dependencies]
rand_distr = "0.4.3"
rand = "0.8.5"
mnist = "0.5.0"